# utils/validator.js
@@ -10,8 +10,9 @@ const signupSchema = Joi.object({
     "string.min": "Password must be at least 6 characters long",
     "any.required": "Password is required",
   }),
-  role: Joi.string().valid("user", "admin").default("user").messages({
-    "any.only": 'Role must be either "user" or "admin"',
+  confirmPassword: Joi.string().required().valid(Joi.ref("password")).messages({
+    "any.only": "Passwords do not match",
+    "any.required": "Confirm password is required",
   }),
 });
 
